--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -10,7 +10,7 @@ site_url: https://preview.ec-nordbund.de/
 show_preview_links: true
 
 media_folder: static/img
-public_folder: /img
+public_folder: img
 locale: 'de'
 
 slug:
