--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,38 +1,38 @@
 packageExtensions:
   "@nuxt/babel-preset-app@*":
     dependencies:
-      sass-loader: "10"
-      webpack: "4"
+      sass-loader: 10
+      webpack: 4
   "@nuxt/content@*":
     dependencies:
       json5: "*"
+  "@nuxt/core@*":
+    dependencies:
+      unplugin-vue2-script-setup: "*"
   "@nuxt/types@*":
     dependencies:
-      webpack: "4"
-  nuxt-build-optimisations@*:
+      webpack: 4
+  "@nuxtjs/composition-api@*":
     dependencies:
-      webpack: "4"
+      unplugin-vue2-script-setup: "*"
   "@nuxtjs/eslint-config-typescript@*":
-    dependencies:
-      eslint: "*"
-  "eslint-plugin-nuxt@*":
     dependencies:
       eslint: "*"
   "@nuxtjs/eslint-module@*":
     dependencies:
-      webpack: "4"
-  "nuxt@*":
+      webpack: 4
+  eslint-plugin-nuxt@*:
+    dependencies:
+      eslint: "*"
+  nuxt-build-optimisations@*:
+    dependencies:
+      webpack: 4
+  nuxt@*:
     dependencies:
       consola: "*"
-  "@nuxt/core@*":
-    dependencies:
-      unplugin-vue2-script-setup: "*"
-  "@nuxtjs/composition-api@*":
-    dependencies:
-      unplugin-vue2-script-setup: "*"
 
 plugins:
   - path: .yarn/plugins/@yarnpkg/plugin-interactive-tools.cjs
     spec: "@yarnpkg/plugin-interactive-tools"
 
-yarnPath: .yarn/releases/yarn-berry.js
+yarnPath: .yarn/releases/yarn-1.23.0-20220130.1630.cjs
